--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^34.0.1",
-    "electron-builder": "^25.1.8",
-    "electron-packager": "^17.1.2"
+    "@electron/get": "^3.1.0",
+    "@electron/packager": "^18.3.6",
+    "safer-buffer": "^2.1.2"
   },
   "dependencies": {
     "iconv-lite": "^0.6.3",
